Turning Cast Shadows in Light Settings off makes makes dark glitches. #91024

Closed
opened 2021-08-29 11:37:08 +02:00 by Samanwaya Datta · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4531

Blender Version
Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-27 13:47, hash: 7d5e8d2bc1
Worked: It works in the Latest 2.93 release.

Short description of error
When turning off the "Cast Shadows" settings or check-box in the Light Settings(Object Data Properties), the rendering causes a glitch and this happens :
{F10347142, size=full}
With the "Cast Shadows" on or checked, it works as expected :
{F10347146, size=full}

Upon Further Investigation, it seems this bug occurs only when adding a Plane primitive. When adding a cube, or a torus or anything, the glitch does not occur and occurs only when adding a Plane primitive.
Also, when hitting F12 to render the image, the rendered image is fine :
{F10347186, size=full}

Exact steps for others to reproduce the error

  • Open an empty scene or .blend file.
  • Add a Plane primitive.
  • Change the render engine to Cycles.
  • Go to Object Data Properties of Light.
  • Turn off Cast Shadows setting, and hit the Render option in Viewport.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4531 **Blender Version** Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-27 13:47, hash: `7d5e8d2bc1` Worked: It works in the Latest 2.93 release. **Short description of error** When turning off the "Cast Shadows" settings or check-box in the Light Settings(Object Data Properties), the rendering causes a glitch and this happens : {[F10347142](https://archive.blender.org/developer/F10347142/image.png), size=full} With the "Cast Shadows" on or checked, it works as expected : {[F10347146](https://archive.blender.org/developer/F10347146/image.png), size=full} Upon Further Investigation, it seems this bug occurs only when adding a Plane primitive. When adding a cube, or a torus or anything, the glitch does not occur and occurs only when adding a Plane primitive. Also, when hitting F12 to render the image, the rendered image is fine : {[F10347186](https://archive.blender.org/developer/F10347186/image.png), size=full} **Exact steps for others to reproduce the error** * Open an empty scene or `.blend` file. * Add a Plane primitive. * Change the render engine to Cycles. * Go to Object Data Properties of Light. * Turn off Cast Shadows setting, and hit the Render option in Viewport.

Added subscriber: @Sammie156

Added subscriber: @Sammie156

A Video Demonstration of the bug. The Rendering issue comes up only when adding a plane, otherwise it renders fine.

Z7oxCBDckE.mp4

A Video Demonstration of the bug. The Rendering issue comes up only when adding a plane, otherwise it renders fine. [Z7oxCBDckE.mp4](https://archive.blender.org/developer/F10347735/Z7oxCBDckE.mp4)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-27 13:47,

Hi, thanks for the report. I can not reproduce on master (3.0.0, b42354672e80) . Issue may be specific to Cycles-X branch? Can you please confirm?

Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4531

Also: try reproducing the problem after upgrading the driver: https://docs.blender.org/manual/en/latest/troubleshooting/gpu/windows/intel.html


System Information

Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
>Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-27 13:47, Hi, thanks for the report. I can not reproduce on master (3.0.0, `b42354672e80`) . Issue may be specific to Cycles-X branch? Can you please confirm? >Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4531 Also: try reproducing the problem after upgrading the driver: https://docs.blender.org/manual/en/latest/troubleshooting/gpu/windows/intel.html --- **System Information** ```Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```

Hello @PratikPB2123 !! Thanks for replying. Yes, the issue is specific to the Cycles-X branch. Also, the Drivers are up to date. I've checked them. They seem to be at the latest version.

Hello @PratikPB2123 !! Thanks for replying. Yes, the issue is specific to the Cycles-X branch. Also, the Drivers are up to date. I've checked them. They seem to be at the latest version.

Also, the issue only arises when adding a plane primitive. With the scene having torus, Suzanne head, and a lot more objects the issue doesn't occur so its unlikely to be a graphics driver issue.

Also, the issue only arises when adding a plane primitive. With the scene having torus, Suzanne head, and a lot more objects the issue doesn't occur so its unlikely to be a graphics driver issue.
Member

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'
Member

Hi, thank you for checking. Tracker is not yet open for the Cycles-X bug report.

Refer the Sergey's comment:

In #90848#1210038, @Sergey wrote:
Thanks for bringing it to our attention, we will check on it.

As for official policy, we are not open for receiving Cycles X issues in the bug tracker. Best ways to provide feedback is either the devtalk (https:*devtalk.blender.org/t/cycles-x-feedback/18598) or talk to us in the render-cycles-module room on blender.chat (https:*blender.chat/channel/render-cycles-module).

So I will have to close the task. Thanks again for the report :)

Hi, thank you for checking. Tracker is not yet open for the Cycles-X bug report. Refer the Sergey's comment: > In #90848#1210038, `@Sergey` wrote: > Thanks for bringing it to our attention, we will check on it. > > As for official policy, we are not open for receiving Cycles X issues in the bug tracker. Best ways to provide feedback is either the devtalk (https:*devtalk.blender.org/t/cycles-x-feedback/18598) or talk to us in the render-cycles-module room on blender.chat (https:*blender.chat/channel/render-cycles-module). So I will have to close the task. Thanks again for the report :)

This issue was referenced by 56d4366294ed45523331e8afa7be722dc5f53025

This issue was referenced by 56d4366294ed45523331e8afa7be722dc5f53025

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Thank you so much for working on this Brecht Sir!

Thank you so much for working on this Brecht Sir!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91024
No description provided.