Cycles X: fix broken render when disabling shadows on lights

Fixes T91024